--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
 }
@@ -27,7 +31,7 @@ img {
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
 }
-
+ 
 /***** BASE *****/ /* 1rem = 16px */
 body {
   font: 400 1rem "DM Sans", sans-serif;
@@ -36,7 +40,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1 {
+.title {
   font: 700 1.875rem "Poppins", sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
@@ -98,13 +102,12 @@ h1 {
   z-index: 100;
 }
 
-nav {
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+main {
+  margin-top: calc(var(--header-height) + 2rem);
 }
+
+
+/**** LOGO *****/
 
 .logo {
   font: 700 1.31rem "Poppins", sans-serif;
@@ -114,8 +117,86 @@ nav {
   color: var(--base-color);
 }
 
-main {
-  margin-top: var(--header-height);
+/**** NAVIGATION *****/
+
+nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+nav ul li {
+  text-align: center;
+}
+
+nav ul li a {
+  transition: color .3s;
+  position: relative;
+}
+
+nav ul li a:hover {
+  color: var(--base-color);
+}
+
+nav ul li a::after {
+  content: '';
+  width: 0%;
+  height: 2px; /* .125rem */
+  background: var(--base-color);
+  position: absolute;
+  bottom: -1.5rem;
+  left: 0;
+  transition: width .3s;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+nav .menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+/***** Mostrar Menu *****/
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+  background: var(--body-color);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-content: center;
+}
+
+
+
+nav.show ul.grid {
+  gap: 4rem;
+}
+
+/***** TOGGLE MENU *****/
+.toggle{
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+  
+  position: absolute;
+  right: 1.5rem; /* transicao bacana */
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
 }
 
 /***** HOME *****/
