--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ img {
 }
  
 /***** BASE *****/ /* 1rem = 16px */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font: 400 1rem "DM Sans", sans-serif;
   color: var(--text-color);
@@ -72,6 +76,15 @@ body {
   );
 }
 
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
+  );
+}
+
 /**** LAYOUT *****/
 
 .container {
@@ -89,6 +102,18 @@ body {
   padding: 5rem 0;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
+.section header {
+  margin-bottom: 4rem;
+}
+
+.section header strong {
+  color: var(--base-color);
+}
+
 #header {
   border-bottom: 1px #e4e4e4 solid;
   margin-bottom: 2rem;
@@ -100,6 +125,10 @@ body {
   top: 0;
   left: 0;
   z-index: 100;
+}
+
+#header.scroll {
+  box-shadow: 0px 0px 12px rgba(0,0,0,.1);
 }
 
 main {
@@ -158,9 +187,16 @@ nav ul li a:hover::after {
 nav .menu {
   opacity: 0;
   visibility: hidden;
+  top: -20rem;
+  transition: .2s;
+}
+
+nav .menu ul {
+  display: none;
 }
 
 /***** Mostrar Menu *****/
+
 nav.show .menu {
   opacity: 1;
   visibility: visible;
@@ -174,13 +210,17 @@ nav.show .menu {
   place-content: center;
 }
 
-
+nav.show .menu ul {
+  display:grid;
+}
 
 nav.show ul.grid {
   gap: 4rem;
 }
 
+
 /***** TOGGLE MENU *****/
+
 .toggle{
   color: var(--base-color);
   font-size: 1.5rem;
@@ -191,12 +231,15 @@ nav .icon-close {
   opacity: 0;
   
   position: absolute;
-  right: 1.5rem; /* transicao bacana */
+  top: -1.5rem;
+  right: 1.5rem; 
+  transition: .2s;/* transicao bacana */
 }
 
 nav.show div.icon-close {
   visibility: visible;
   opacity: 1;
+  top: 1.5rem;
 }
 
 /***** HOME *****/
@@ -246,4 +289,71 @@ nav.show div.icon-close {
 
 #home .text p {
   margin-bottom: 2rem;
+}
+
+/***** ABOUT ******/
+
+#about {
+  background: white;
+}
+#about .container {
+  margin: 0;
+}
+
+#about .image::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+#about .text p {
+  padding: .5rem;
+}
+
+/***** SERVICES ******/
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0,0,0,0.08);
+  border-bottom: .25rem solid var(--base-color);
+  border-radius: .25rem .25rem 0 0;
+  text-align: center;
+}
+
+.card i {
+  display:block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: .75rem;
 }
