--- a/nlw/style.css
+++ b/nlw/style.css
@@ -1,4 +1,4 @@
-/***** RESET *****/
+/*====  RESET ============================ */
 * {
   margin: 0;
   padding: 0;
@@ -18,11 +18,13 @@ img {
   height: auto;
 }
 
-/***** VARIABLES *****/
+/*====  VARIABLES ============================ */
 :root {
   --header-height: 4.5rem;
+
+  /* colors */
   --hue: 159;
-  /* HSL color mode => HUE SATURATION LIGHTNESS */
+  /* HSL color mode */
   --base-color: hsl(var(--hue) 36% 57%);
   --base-color-second: hsl(var(--hue) 65% 88%);
   --base-color-alt: hsl(var(--hue) 57% 53%);
@@ -31,36 +33,35 @@ img {
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
 }
- 
-/***** BASE *****/ /* 1rem = 16px */
+
+/*===  BASE ============================ */
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font: 400 1rem "DM Sans", sans-serif;
+  font: 400 1rem 'DM Sans', sans-serif;
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
 }
 
 .title {
-  font: 700 1.875rem "Poppins", sans-serif;
+  font: 700 1.875rem 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
 
 .button {
-  background: var(--base-color);
+  background-color: var(--base-color);
   color: var(--text-color-light);
   height: 3.5rem;
   display: inline-flex;
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem "DM Sans", sans-serif;
+  font: 500 1rem 'DM Sans', sans-serif;
   transition: background 0.3s;
-  /* Assim como o span, a tag button é por padrão display inline. Isso significa que não aceita propriedades de height ou width que estrapole o tamanho do conteúdo. Se usarmos display block, ele receberá altura, porém o width vai preencher o tamanho da caixa pai, neste caso a div de class container, sendo assim, o mais indicado é usar display inline-flex que também habilita o align-itens */
 }
 
 .button:hover {
@@ -71,8 +72,8 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    hsla(var(--hue), 36%, 57%, 1) 0%,
-    hsla(var(--hue), 65%, 88%, 0.34) 100%
+    hsla(var(--hue), 36%, 57%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34)
   );
 }
 
@@ -85,12 +86,10 @@ body {
   );
 }
 
-/**** LAYOUT *****/
-
+/*====  LAYOUT ============================ */
 .container {
-  margin: 0 1.5rem;
-  /*margin-left: 1.5rem;
-  margin-right: 1.5rem;*/
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .grid {
@@ -115,43 +114,42 @@ body {
 }
 
 #header {
-  border-bottom: 1px #e4e4e4 solid;
+  border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem;
   display: flex;
 
-  width: 100%;
-  background: var(--body-color);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
+  background-color: var(--body-color);
+  width: 100%;
 }
 
 #header.scroll {
-  box-shadow: 0px 0px 12px rgba(0,0,0,.1);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
 }
 
 main {
   margin-top: calc(var(--header-height) + 2rem);
 }
 
-/**** LOGO *****/
-
+/*====  LOGO ============================ */
 .logo {
-  font: 700 1.31rem "Poppins", sans-serif;
+  font: 700 1.31rem 'Poppins', sans-serif;
   color: var(--title-color);
 }
+
 .logo span {
   color: var(--base-color);
 }
 
-/**** NAVIGATION *****/
-
+/*====  NAVIGATION ============================ */
 nav {
   height: var(--header-height);
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -160,7 +158,7 @@ nav ul li {
 }
 
 nav ul li a {
-  transition: color .3s;
+  transition: color 0.2s;
   position: relative;
 }
 
@@ -171,12 +169,14 @@ nav ul li a:hover {
 nav ul li a::after {
   content: '';
   width: 0%;
-  height: 2px; /* .125rem */
+  height: 2px;
   background: var(--base-color);
+
   position: absolute;
-  bottom: -1.5rem;
   left: 0;
-  transition: width .3s;
+  bottom: -1.5rem;
+
+  transition: width 0.2s;
 }
 
 nav ul li a:hover::after {
@@ -187,51 +187,55 @@ nav .menu {
   opacity: 0;
   visibility: hidden;
   top: -20rem;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 nav .menu ul {
   display: none;
 }
 
-/***** Mostrar Menu *****/
-
+/* Mostrar menu */
 nav.show .menu {
   opacity: 1;
   visibility: visible;
+
   background: var(--body-color);
+
   height: 100vh;
   width: 100vw;
+
   position: fixed;
   top: 0;
   left: 0;
+
   display: grid;
   place-content: center;
 }
 
 nav.show .menu ul {
-  display:grid;
+  display: grid;
 }
 
 nav.show ul.grid {
   gap: 4rem;
 }
 
-/***** TOGGLE MENU *****/
-
-.toggle{
+/* toggle menu */
+.toggle {
   color: var(--base-color);
   font-size: 1.5rem;
   cursor: pointer;
 }
+
 nav .icon-close {
   visibility: hidden;
   opacity: 0;
-  
+
   position: absolute;
   top: -1.5rem;
-  right: 1.5rem; 
-  transition: .2s;/* transicao bacana */
+  right: 1.5rem;
+
+  transition: 0.2s;
 }
 
 nav.show div.icon-close {
@@ -240,8 +244,7 @@ nav.show div.icon-close {
   top: 1.5rem;
 }
 
-/***** HOME *****/
-
+/*====  HOME ============================ */
 #home {
   overflow: hidden;
 }
@@ -250,19 +253,19 @@ nav.show div.icon-close {
   margin: 0;
 }
 
+#home .image {
+  position: relative;
+}
+
 #home .image::before {
-  content: "";
+  content: '';
   height: 100%;
   width: 100%;
   background: var(--base-color-second);
   position: absolute;
   top: -16.8%;
-  left: 16.8%;
+  left: 16.7%;
   z-index: 0;
-}
-
-#home .image {
-  position: relative;
 }
 
 #home .image img {
@@ -289,17 +292,21 @@ nav.show div.icon-close {
   margin-bottom: 2rem;
 }
 
-/***** ABOUT ******/
-
+/*====  ABOUT ============================ */
 #about {
   background: white;
 }
+
 #about .container {
   margin: 0;
 }
 
+#about .image {
+  position: relative;
+}
+
 #about .image::before {
-  content: "";
+  content: '';
   height: 100%;
   width: 100%;
   background: var(--base-color-second);
@@ -307,10 +314,6 @@ nav.show div.icon-close {
   top: -8.3%;
   left: -33%;
   z-index: 0;
-}
-
-#about .image {
-  position: relative;
 }
 
 #about .image img {
@@ -327,25 +330,21 @@ nav.show div.icon-close {
   margin-right: 1.5rem;
 }
 
-#about .text p {
-  padding: .5rem;
-}
-
-/***** SERVICES ******/
+/*====  SERVICES ============================ */
 .cards.grid {
   gap: 1.5rem;
 }
 
 .card {
   padding: 3.625rem 2rem;
-  box-shadow: 0px 0px 12px rgba(0,0,0,0.08);
-  border-bottom: .25rem solid var(--base-color);
-  border-radius: .25rem .25rem 0 0;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
   text-align: center;
 }
 
 .card i {
-  display:block;
+  display: block;
   margin-bottom: 1.5rem;
   font-size: 5rem;
   color: var(--base-color);
@@ -353,10 +352,10 @@ nav.show div.icon-close {
 
 .card .title {
   font-size: 1.5rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
-/***** TESTIMONIALS ******/
+/*====  TESTIMONIALS ============================ */
 #testimonials {
   background: white;
 }
@@ -374,9 +373,10 @@ nav.show div.icon-close {
 
 #testimonials blockquote {
   padding: 2rem;
-  box-shadow: 0px 0px 12px rgba(0,0,0,.08);
-  border-radius: .25rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 0.25rem;
 }
+
 #testimonials blockquote p {
   position: relative;
   text-indent: 1.875rem;
@@ -387,8 +387,8 @@ nav.show div.icon-close {
 #testimonials blockquote p span {
   font: 700 2.5rem serif;
   position: absolute;
-  top: -.375rem;
-  left: -1.875rem;  
+  top: -0.375rem;
+  left: -1.875rem;
   color: var(--base-color);
 }
 
@@ -403,30 +403,25 @@ nav.show div.icon-close {
   height: 2rem;
   object-fit: cover;
   clip-path: circle();
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
-/* SWIPER */
-
+/* swiper */
 .swiper-slide {
   height: auto;
-  padding: 4rem 1rem; 
+  padding: 4rem 1rem;
 }
 
-.swiper-pagination-bullets {
-  position: relative;
-}
 .swiper-pagination-bullet {
-  width: .75rem;
-  height: .75rem;
+  width: 0.75rem;
+  height: 0.75rem;
 }
 
 .swiper-pagination-bullet-active {
   background: var(--base-color);
 }
 
-/***** CONTACT ******/
-
+/*====  CONTACT ============================ */
 #contact .grid {
   gap: 4rem;
 }
@@ -438,7 +433,7 @@ nav.show div.icon-close {
 #contact .button i,
 #contact ul li i {
   font-size: 1.5rem;
-  margin-right: .625rem;
+  margin-right: 0.625rem;
 }
 
 #contact ul.grid {
@@ -446,7 +441,7 @@ nav.show div.icon-close {
 }
 
 #contact ul li {
-  display:flex;
+  display: flex;
   align-items: center;
 }
 
