--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ivl57t');
-  src:  url('fonts/icomoon.eot?ivl57t#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ivl57t') format('truetype'),
-    url('fonts/icomoon.woff?ivl57t') format('woff'),
-    url('fonts/icomoon.svg?ivl57t#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ihz313');
+  src:  url('fonts/icomoon.eot?ihz313#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ihz313') format('truetype'),
+    url('fonts/icomoon.woff?ihz313') format('woff'),
+    url('fonts/icomoon.svg?ihz313#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -57,6 +57,9 @@
 }
 .icon-close:before {
   content: "\e90b";
+}
+.icon-chevrons-up:before {
+  content: "\e90c";
 }
 .icon-phone:before {
   content: "\e900";
