--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ihz313');
-  src:  url('fonts/icomoon.eot?ihz313#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ihz313') format('truetype'),
-    url('fonts/icomoon.woff?ihz313') format('woff'),
-    url('fonts/icomoon.svg?ihz313#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?7g6vjg');
+  src:  url('fonts/icomoon.eot?7g6vjg#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?7g6vjg') format('truetype'),
+    url('fonts/icomoon.woff?7g6vjg') format('woff'),
+    url('fonts/icomoon.svg?7g6vjg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -58,7 +58,7 @@
 .icon-close:before {
   content: "\e90b";
 }
-.icon-chevrons-up:before {
+.icon-arrow-up:before {
   content: "\e90c";
 }
 .icon-phone:before {
