--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ img {
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
+
+  /* FONTS */
+  --title-font-size: 1.875rem;
 }
  
 /***** BASE *****/ /* 1rem = 16px */
@@ -45,7 +48,7 @@ body {
 }
 
 .title {
-  font: 700 1.875rem "Poppins", sans-serif;
+  font: 700 var(--title-font-size) "Poppins", sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -479,16 +482,51 @@ footer i {
   color: var(--text-color-light);
 }
 
-footer .social {
-  display:flex;
-  gap: 2rem;
+footer .social a {
+  margin-right: 2rem;
+  transition: .3s;
+  display: inline-block;
+  gap: 2rem; 
+}
+
+footer .social a:hover {
+  transform: translateY(-8px);
 }
 
 /* BACK TO TOP BUTTON */
 
 .back-to-top {
   background: var(--base-color);
-  position: fixed;
-  right: 1 rem;
-  bottom: 1 rem;
+  color: var(--text-color-light);
+  position: fixed; 
+  right: 1rem;
+  bottom: 1rem;
+  text-decoration: none;
+  padding: .5rem;
+  clip-path: circle();
+  font-size: 1.5rem;
+  line-height: 0;
+  visibility: hidden;
+  opacity: 0; 
+  transition: .3s;
+  transform: translateY(100%);
 }
+
+ .back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+} 
+
+/* RESPONSIVO */
+/* Extra large devices: 1200> */
+/* Large dvices: 1023> */
+
+/* Large devices: 992 > */
+@media (min-width: 992px) {
+  :root{
+    --title-font-size:2.2rem;
+  }
+}
+
+/* Medium devices: 992> */
